# RPI5_PIO_TEST_example

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.sh  cmake_install.cmake  cnt_pio  gpio_test  ioLibrary.patch  iperf  loopback_test2  patch.sh  qspi_test  qspi_test_clean
inc/: wizchip_qspi_pio.pio  wizchip_qspi_pio.pio.h
include/: wizchip_qspi_pio.pio  wizchip_qspi_pio.pio.c  wizchip_qspi_pio.pio.h
src/: cnt_pio.c  gpio_test.c  loopback_test.c  loopback_test2.c  pio_func.c  pio_func.h  pio_reset.c  qspi_test copy.c  qspi_test.c  qspi_test_backup.c  qspi_test_clean.c  wizchip_loopback.c  wizchip_qspi_pio.pio  wizchip_spi.c  wizchip_spi.h
src/iperf3/: CMakeLists.txt  iperf.c  iperf.h
src/iperf3/lwip/: CMakeLists.txt  README.md  wizchip_iperf_lwip.c
src/iperf3/toe/: CMakeLists.txt  README.md  wizchip_iperf_toe.c
